Revert "Include the install step in all jobs"
This reverts commit 2de72500c83ed0a6c78770740c88fc9775b567b8.

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -1,7 +1,6 @@
-name: Setup CI
-
+name: "Setup Node"
 runs:
-  using: composite
+  using: "composite"
   steps:
     - name: Setup Node.js 16.x
       uses: actions/setup-node@v3
