--- a/.github/workflows/changeset-version.yml
+++ b/.github/workflows/changeset-version.yml
@@ -15,7 +15,10 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/ci-setup
+      - uses: ./.github/actions/setup-node
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Create Release Pull Request or Publish to npm
         # https://github.com/changesets/action
